--- a/src/backend/quasar-project/package.json
+++ b/src/backend/quasar-project/package.json
@@ -14,19 +14,12 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
-    "apexcharts": "^3.49.1",
     "axios": "^1.2.1",
-    "chart.js": "^4.4.3",
-    "dotenv": "^16.4.5",
-    "lodash": "^4.17.21",
     "pinia": "^2.0.11",
-    "pinia-plugin-persist": "^1.0.0",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
-    "vue-chartjs": "^5.3.1",
     "vue-i18n": "^9.0.0",
-    "vue-router": "^4.0.12",
-    "vue3-apexcharts": "^1.5.2"
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "^3.3.1",
